exports[`Operations > Should add operations to parent correctly 1`] = `
{
  "foo": 1,
  "bar": 2,
  "baz": 3
}
`;

exports[`Operations > Should add operations to parent correctly 2`] = `
{
  "foo": 42,
  "bar": 2,
  "baz": 3
}
`;

exports[`Operations > Should add operations to parent correctly 3`] = `
{
  "foo": 69,
  "bar": 10,
  "baz": 3
}
`;

exports[`Operations > Should add operations to parent correctly 4`] = `
{
  "foo": 1,
  "bar": 2,
  "baz": 3
}
`;

exports[`Operations > Should add operations to parent correctly 5`] = `
{
  "foo": 69,
  "bar": 10,
  "baz": 3
}
`;

exports[`Operations > Should redo and undo correctly 1`] = `
{
  "foo": 1,
  "bar": 2,
  "baz": 3
}
`;

exports[`Operations > Should redo and undo correctly 2`] = `
{
  "foo": 42,
  "bar": 91,
  "baz": 3
}
`;

exports[`Operations > Should redo and undo correctly 3`] = `
{
  "foo": 1,
  "bar": 2,
  "baz": 3
}
`;

exports[`Operations > Should redo and undo correctly 4`] = `
{
  "foo": 42,
  "bar": 91,
  "baz": 3
}
`;
